--- a/answers_Rene/styles.css
+++ b/answers_Rene/styles.css
@@ -56,8 +56,8 @@ div>span:nth-child(even) {
 }
 
 .relative {
-position: relative;
-left: 156px;
+    position: relative;
+    left: 156px;
 }
 
 .absolute {
@@ -81,7 +81,7 @@ main {
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     border: red 1px solid;
     grid-gap: 5px;
@@ -118,6 +118,6 @@ footer a:hover {
     color: dodgerblue;
 }
 
-/* ol li {
+ol li {
     text-decoration: line-through;
-} */
+}
