--- a/answers_franZ/style.css
+++ b/answers_franZ/style.css
@@ -144,7 +144,8 @@ main {
 }
 
 footer a {
-    color: red;
+    color: blue;
+    text-decoration: none;
 }
 
 footer a:hover {
@@ -152,7 +153,7 @@ footer a:hover {
 }
 
 footer a:visited {
-    color: blue;
+    color: red;
 }
 
 
